Add avatar img and edit resume

--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
     <header>
         <nav class="header-content">
             <div class="intro-text">
-                    <h1>
-                        <strong>Daniel 'Joon' Yi</strong>
-                    </h1>
+                <img class="avatar" src="img/avatar.png" alt="avatar">
+                <h1>
+                    <strong>Daniel 'Joon' Yi</strong>
+                </h1>
                     <!-- <h3>
                         {Aspiring Developer}
                     </h3>
                     <p>
                         My passion is learning. My goal is growing. My timeline is never-ending.
                     </p> -->
-                </div>
+            </div>
 
             <ul class="social-list flex">
                 <li class="social-list-item"><a href="/files/Daniel_Yi_Resume.pdf" target="_blank" class="social-list-link"><i class="fas fa-file fa-2x"></i></a>
@@ -59,15 +60,15 @@
                     <h3>Getting Acquainted</h3>
                     <div class="skill-group flex">
                         <img src="/img/react-original.svg" alt="react" class="skill-icon">
-                        <img src="/img/git-original.svg" alt="" class="skill-icon">
-                        <img src="/img/npm-original-wordmark.svg" alt="" class="skill-icon">
+                        <img src="/img/git-original.svg" alt="git" class="skill-icon">
+                        <img src="/img/npm-original-wordmark.svg" alt="npm" class="skill-icon">
                     </div>
                 </div>
                 <div class="skill-item">
                     <h3>On The Horizon</h3>
                     <div class="skill-group flex">
                         <img src="/img/python-original.svg" alt="python" class="skill-icon">
-                        <img src="/img/nodejs-original.svg" alt="node" class="skill-icon">
+                        <img src="/img/java-original.svg" alt="java" class="skill-icon">
                         <img src="/img/postgresql-original.svg" alt="postgresql" class="skill-icon">
                     </div>
                 </div>
