--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <section class="skills-container section" id="about">
         <h2>MEMORIES</h2>
         <div class="skills flex">
-          <div class="skill-item bg-accent">
+          <div class="skill-item">
             <h3>Present</h3>
             <div class="skill-group">
               <div class="skill-icon" data-tooltip="React">
@@ -114,7 +114,7 @@
               </div>
             </div>
           </div>
-          <div class="skill-item bg-accent">
+          <div class="skill-item">
             <h3>Future</h3>
             <div class="skill-group future-group">
               <div class="skill-icon" data-tooltip="Java">
