--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         {Aspiring Developer}
                     </h3>
                     <p>
-                        My passion is learning. My goal is growing. My timeline is never-ending.
+                        Passion is learning. Goal is growing. Timeline is never-ending.
                     </p> -->
         </div>
 
@@ -76,10 +76,9 @@
 
     <main class="main-container">
       <section class="skills-container section" id="about">
-        <h2>MEMORIES</h2>
+        <h2>Skills</h2>
         <div class="skills flex">
           <div class="skill-item">
-            <h3>Present</h3>
             <div class="skill-group">
               <div class="skill-icon" data-tooltip="React">
                 <img src="/img/react-original.svg" alt="react" />
@@ -96,6 +95,12 @@
               </div>
               <div class="skill-icon" data-tooltip="NodeJS">
                 <img src="/img/nodejs-original.svg" alt="node" />
+              </div>
+              <div class="skill-icon" data-tooltip="Java">
+                <img src="/img/java-original.svg" alt="java" />
+              </div>
+              <div class="skill-icon" data-tooltip="Python">
+                <img src="/img/python-original.svg" alt="python" />
               </div>
               <div class="skill-icon" data-tooltip="PostgreSQL">
                 <img src="/img/postgresql-original.svg" alt="postgresql" />
@@ -114,22 +119,11 @@
               </div>
             </div>
           </div>
-          <div class="skill-item">
-            <h3>Future</h3>
-            <div class="skill-group future-group">
-              <div class="skill-icon" data-tooltip="Java">
-                <img src="/img/java-original.svg" alt="java" />
-              </div>
-              <div class="skill-icon" data-tooltip="Python">
-                <img src="/img/python-original.svg" alt="python" />
-              </div>
-            </div>
-          </div>
         </div>
       </section>
 
       <section class="projects-container section" id="projects">
-        <h2>ADVENTURES</h2>
+        <h2>Projects</h2>
         <div class="projects">
           <div class="project-card">
             <div class="img-container">
