--- a/index.html
+++ b/index.html
@@ -27,12 +27,6 @@
           <h1>
             <strong>danieljoonyi</strong>
           </h1>
-          <!-- <h3>
-                        {Aspiring Developer}
-                    </h3>
-                    <p>
-                        Passion is learning. Goal is growing. Timeline is never-ending.
-                    </p> -->
         </div>
 
         <ul class="social-list flex">
@@ -75,6 +69,13 @@
     </header>
 
     <main class="main-container">
+      <section class="self section flex">
+        <h2 class="title">{Aspiring Developer}</h2>
+        <p class="title-p">
+          Passion is learning. Goal is growing. Timeline is never-ending.
+        </p>
+      </section>
+
       <section class="skills-container section" id="about">
         <h2>Skills</h2>
         <div class="skills flex">
