--- a/index.html
+++ b/index.html
@@ -163,6 +163,24 @@
           </div>
           <div class="project-card">
             <div class="img-container">
+              <img src="/img/financial-app.png" alt="" class="project-img" />
+              <div class="img-overlay">
+                <h3 class="project-title">Ingredient List</h3>
+                <div class="btn-container">
+                  <a href="" target="_blank"
+                    ><button class="btn-project">Preview</button></a
+                  >
+                  <a
+                    href="https://github.com/JoonDY/financial-app"
+                    target="_blank"
+                    ><button class="btn-project">Code</button></a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project-card">
+            <div class="img-container">
               <img src="/img/redesign-site.png" alt="" class="project-img" />
               <div class="img-overlay">
                 <h3 class="project-title">Site Redesign</h3>
