--- a/index.html
+++ b/index.html
@@ -165,9 +165,11 @@
             <div class="img-container">
               <img src="/img/financial-app.png" alt="" class="project-img" />
               <div class="img-overlay">
-                <h3 class="project-title">Ingredient List</h3>
+                <h3 class="project-title">Financial Calculator</h3>
                 <div class="btn-container">
-                  <a href="" target="_blank"
+                  <a
+                    href="https://mystifying-wiles-1197a7.netlify.app/"
+                    target="_blank"
                     ><button class="btn-project">Preview</button></a
                   >
                   <a
