--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <ul class="social-list flex">
           <li class="social-list-item" data-tooltip="Resume">
             <a
-              href="/files/Daniel_Yi_Resume.pdf"
+              href="/files/Yi_Daniel.pdf"
               target="_blank"
               class="social-list-link"
               ><i class="fas fa-file fa-2x"></i
