--- a/index.html
+++ b/index.html
@@ -103,21 +103,21 @@
               <div class="skill-icon" data-tooltip="Python">
                 <img src="/img/python-original.svg" alt="python" />
               </div>
-              <div class="skill-icon" data-tooltip="PostgreSQL">
+              <!-- <div class="skill-icon" data-tooltip="PostgreSQL">
                 <img src="/img/postgresql-original.svg" alt="postgresql" />
-              </div>
+              </div> -->
               <div class="skill-icon" data-tooltip="HTML5">
                 <img src="/img/html5-original.svg" alt="html" />
               </div>
               <div class="skill-icon" data-tooltip="CSS3">
                 <img src="/img/css3-original.svg" alt="css" />
               </div>
-              <div class="skill-icon" data-tooltip="Git">
+              <!-- <div class="skill-icon" data-tooltip="Git">
                 <img src="/img/git-original.svg" alt="git" />
               </div>
               <div class="skill-icon" data-tooltip="npm">
                 <img src="/img/npm-original-wordmark.svg" alt="npm" />
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
